digital_ocean/kube/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: do-kubernetes-sample-app
  annotations:
    # kubernetes.digitalocean.com/load-balancer-id: "your-load-balancer-id"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "3"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
spec:
  type: LoadBalancer
  selector:
    app: do-kubernetes-sample-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
